added glsl in background

--- a/custom/keybinds.conf
+++ b/custom/keybinds.conf
@@ -12,6 +12,11 @@ bind = SUPER, s, exec, hyprshot --mode=region --o ~/Images/screenshots/
 bind = Super SHIFT, R, exec, hyprctl reload
 bind = Super SHIFT, D, exec, $fullmenu
 bind = Super, D, exec, $menu
+bind = Super ALT, D, exec, $menupage
+
+bind = Super, G, exec, $backgroundGL
+bind = Super, H, exec, $backgroundVideo
+
 
 # Azerty
 # Switch workspaces with mainMod + [0-9]
