--- a/custom/general.conf
+++ b/custom/general.conf
@@ -4,5 +4,6 @@
 $scriptsDir = $HOME/.config/hypr/custom/scripts
 $menu = $scriptsDir/menu
 $fullmenu = $scriptsDir/fullmenu
-
-
+$menupage = $scriptsDir/menupage
+$backgroundGL = $scriptsDir/backgroundGL
+$backgroundVideo = $scriptsDir/backgroundVideo
