--- a/custom/keybinds.conf
+++ b/custom/keybinds.conf
@@ -15,6 +15,8 @@ bind = Super, D, exec, $menu
 bind = Super ALT, D, exec, $menupage
 
 bind = Super, G, exec, $backgroundGL
+bind = ALT Super, G, exec, $backgroundGL next
+bind = FN Super, G, exec, $backgroundGL prev
 bind = Super, H, exec, $backgroundVideo
 
 
