added dispaly resolution resolv

--- a/custom/general.conf
+++ b/custom/general.conf
@@ -2,8 +2,10 @@
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 #
 $scriptsDir = $HOME/.config/hypr/custom/scripts
+$display=$scriptsDir/display
 $menu = $scriptsDir/menu
 $fullmenu = $scriptsDir/fullmenu
 $menupage = $scriptsDir/menupage
 $backgroundGL = $scriptsDir/backgroundGL
 $backgroundVideo = $scriptsDir/backgroundVideo
+#monitor= $(echo $display)
