--- a/custom/startup.conf
+++ b/custom/startup.conf
@@ -1,3 +1,5 @@
+exec-once = notify-send "$(cat ${scriptsDir}/display)"
+
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
