added 4K monitor examples

--- a/custom/general.conf
+++ b/custom/general.conf
@@ -9,3 +9,4 @@ $menupage = $scriptsDir/menupage
 $backgroundGL = $scriptsDir/backgroundGL
 $backgroundVideo = $scriptsDir/backgroundVideo
 #monitor= $(echo $display)
+#monitor=HDMI-A-1,3840x2160@60,0x0,1
