--- a/hyprland.conf
+++ b/hyprland.conf
@@ -11,6 +11,7 @@ source=~/.config/hypr/hyprland/keybinds.conf
 
 # Custom 
 source=~/.config/hypr/custom/env.conf
+source=~/.config/hypr/custom/monitors.conf
 source=~/.config/hypr/custom/execs.conf
 source=~/.config/hypr/custom/general.conf
 source=~/.config/hypr/custom/rules.conf
