added script and fixed bind keys

--- a/custom/general.conf
+++ b/custom/general.conf
@@ -6,7 +6,9 @@ $display=$scriptsDir/display
 $menu = $scriptsDir/menu
 $fullmenu = $scriptsDir/fullmenu
 $menupage = $scriptsDir/menupage
+$start = $scriptsDir/start
 $backgroundGL = $scriptsDir/backgroundGL
 $backgroundVideo = $scriptsDir/backgroundVideo
+exec-once = $start
 #monitor= $(echo $display)
 #monitor=HDMI-A-1,3840x2160@60,0x0,1
