--- a/custom/keybinds.conf
+++ b/custom/keybinds.conf
@@ -1,13 +1,16 @@
 # You can put your preferred keybinds here
 # https://wiki.hyprland.org/Configuring/Binds/
 bind = Super, Return, exec, foot
-bind = Super SHIFT, B , exec, brave --enable-features=UseOzonePlatform --ozone-platform=waylande
-bind = Super, c, exec, code-oss --ozone-platform=wayland 
-bind = Super, w, exec, whatsapp-for-linux %U
-bind = Super, t, exec, telegram-desktop %U
+bind = Super SHIFT, B , exec, brave --unity-launch --enable-features=UseOzonePlatform --enable-gpu --ozone-platform=wayland
+bind = Super, c, exec, code --unity-launch --enable-features=UseOzonePlatform --enable-gpu --ozone-platform=wayland 
+bind = Super, w, exec, whatsapp-for-linux
+bind = Super, t, exec, telegram-desktop
+bind = Super, m, exec, AndroidMessages
 bind = CONTROL SUPER, e, exec, gucharmap --font='JetBrain Nerd Font, monospace'
 bind = Super, e, exec, element-desktop %U
 bind = SUPER, s, exec, hyprshot --mode=region --o ~/Images/screenshots/
+
+bind = Super, &, exec, $start
 
 bind = Super SHIFT, R, exec, hyprctl reload
 bind = Super SHIFT, D, exec, $fullmenu
