--- a/custom/env.conf
+++ b/custom/env.conf
@@ -7,10 +7,11 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt5ct  
 env = QT_SCALE_FACTOR,1
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+#env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_CURRENT,wayland
 
 # vulkan
 env = WLR_RENDERER,vulkan
