--- a/hyprland/keybinds.conf
+++ b/hyprland/keybinds.conf
@@ -12,7 +12,7 @@ bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 
 # ################################### Applications ###################################
 # Apps: just normal apps
-bind = Super, C, exec, code-oss --password-store=gnome --enable-features=UseOzonePlatform --ozone-platform=wayland
+# bind = Super, C, exec, code-oss --password-store=gnome --enable-features=UseOzonePlatform --ozone-platform=wayland
 # bind = Super, T, exec, foot
 # bind = Super, SPACE, exec, foot
 # bind = Super, Return, exec, foot --override shell=fish
