removed old unused conf

--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,13 +1,13 @@
-$text_color = rgba(e3e2e6FF)
-$entry_background_color = rgba(10101011)
-$entry_border_color = rgba(8d919955)
-$entry_color = rgba(c3c6cfFF)
+$text_color = rgba({{ $onBackground }}FF)
+$entry_background_color = rgba({{ $background }}11)
+$entry_border_color = rgba({{ $outline }}55)
+$entry_color = rgba({{ $onSurfaceVariant }}FF)
 $font_family = Gabarito
 $font_family_clock = Gabarito
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    color = rgba(10101077)
+    color = rgba({{ $background }}77)
     # path = {{ SWWW_WALL }}
     path = screenshot
     blur_size = 5
