--- a/hyprland/execs.conf
+++ b/hyprland/execs.conf
@@ -3,7 +3,7 @@ exec-once = swww kill; swww init
 exec-once = ags &
 
 # Input method
-exec-once = fcitx5
+exec-once = fcitx6s
 
 # Core components (authentication, lock screen, notification daemon)
 exec-once = gnome-keyring-daemon --start --components=secrets
@@ -18,6 +18,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 # Cursor
-exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+exec-once = hyprctl setcursor Bibata-Modern-Classic 14:w
+
 
 
