fixed bad color hyprlock

--- a/custom/azerty.conf
+++ b/custom/azerty.conf
@@ -19,7 +19,7 @@
  bind = Super CTRL, Quotedbl, movetoworkspace, 3
  bind = Super CTRL, Apostrophe, movetoworkspace, 4
  bind = Super CTRL, Parenleft, movetoworkspace, 5
- bind = Super CTRL, Section, movetoworkspace, 6
+ bind = Super CTRL, Dash, movetoworkspace, 6
  bind = Super CTRL, Egrave, movetoworkspace, 7
  bind = Super CTRL, Exclam, movetoworkspace, 8
  bind = Super CTRL, ccedilla, movetoworkspace, 9
