--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,13 +1,13 @@
-$text_color = rgba({{ $onBackground }}FF)
-$entry_background_color = rgba({{ $background }}11)
-$entry_border_color = rgba({{ $outline }}55)
-$entry_color = rgba({{ $onSurfaceVariant }}FF)
+$text_color = rgba(ebe0d9FF)
+$entry_background_color = rgba(130F0D11)
+$entry_border_color = rgba(9e8e8155)
+$entry_color = rgba(d5c3b6FF)
 $font_family = Gabarito
 $font_family_clock = Gabarito
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    color = rgba({{ $background }}77)
+    color = rgba(130F0D77)
     # path = {{ SWWW_WALL }}
     path = screenshot
     blur_size = 5
