--- a/custom/keybinds.conf
+++ b/custom/keybinds.conf
@@ -8,7 +8,7 @@ bind = Super, t, exec, telegram-desktop
 bind = Super, m, exec, AndroidMessages
 bind = CONTROL SUPER, e, exec, gucharmap --font='JetBrain Nerd Font, monospace'
 bind = Super, e, exec, element-desktop %U
-bind = SUPER, s, exec, hyprshot --mode=region --o ~/Images/screenshots/
+bind = SUPER, s, exec, hyprshot --mode=region --o ~/Images/screenshots
 
 bind = Super, &, exec, $start
 
@@ -30,9 +30,9 @@ bind = Super, H, exec, $backgroundVideo
  bind = Super, Quotedbl, workspace, 3
  bind = Super, Apostrophe, workspace, 4
  bind = Super, Parenleft, workspace, 5
- bind = Super, Section, workspace, 6
+ bind = Super, Minus, workspace, 6
  bind = Super, Egrave, workspace, 7
- bind = Super, Exclam, workspace, 8
+ bind = Super, Underscore, workspace, 8
  bind = Super, ccedilla, workspace, 9
  bind = Super, agrave, workspace, 10
 
@@ -43,9 +43,9 @@ bind = Super, H, exec, $backgroundVideo
  bind = Super CTRL, Quotedbl, movetoworkspace, 3
  bind = Super CTRL, Apostrophe, movetoworkspace, 4
  bind = Super CTRL, Parenleft, movetoworkspace, 5
- bind = Super CTRL, Section, movetoworkspace, 6
+ bind = Super CTRL, Minus, movetoworkspace, 6
  bind = Super CTRL, Egrave, movetoworkspace, 7
- bind = Super CTRL, Exclam, movetoworkspace, 8
+ bind = Super CTRL, Underscore, movetoworkspace, 8
  bind = Super CTRL, ccedilla, movetoworkspace, 9
  bind = Super CTRL, agrave, movetoworkspace, 10
  bind = Super CTRL, bracketleft, movetoworkspace, -1Rr
