--- a/hyprland/colors.conf
+++ b/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c d7e3f8BB -b 3c475844 -s 00000000'
+# exec = export SLURP_ARGS='-d -c ffdcbfBB -b 59422d44 -s 00000000'
 
 general {
-    col.active_border = rgba(e3e2e639)
-    col.inactive_border = rgba(8d919930)
+    col.active_border = rgba(ebe0d939)
+    col.inactive_border = rgba(9e8e8130)
 }
 
 misc {
-    background_color = rgba(1b1b1bFF)
+    background_color = rgba(201a16FF)
 }
 
 plugin {
@@ -19,16 +19,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(101010FF)
-        col.text = rgba(e3e2e6FF)
+        bar_color = rgba(130F0DFF)
+        col.text = rgba(ebe0d9FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e3e2e6), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e3e2e6), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e3e2e6), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(ebe0d9), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(ebe0d9), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(ebe0d9), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(a0c9ffAA) rgba(a0c9ff77),pinned:1
+windowrulev2 = bordercolor rgba(ffb772AA) rgba(ffb77277),pinned:1
