added some blur modified:   hyprland/env.conf 	modified:   hyprland/rules.conf

--- a/hyprland/rules.conf
+++ b/hyprland/rules.conf
@@ -1,5 +1,5 @@
 # ####### Window rules ########
-windowrule = noblur,.*  # Disables blur for windows. Substantially improves performance.
+#windowrule = noblur,.*  # Disables blur for windows. Substantially improves performance.
 
 # windowrule = opacity 0.89 override 0.89 override, .* # Applies transparency to EVERY WINDOW
 windowrule = float, ^(steam)$
@@ -26,7 +26,7 @@ layerrule = noanim, sideleft
 layerrule = noanim, sideright
 layerrule = noanim, osk
 
-layerrule = blur, eww
+layerrule = blur, gi
 layerrule = ignorealpha 0.8, eww
 layerrule = noanim, noanim
 layerrule = blur, noanim
