--- a/hyprland/env.conf
+++ b/hyprland/env.conf
@@ -15,7 +15,7 @@ env = QT_QPA_PLATFORMTHEME, qt6ct
 env = WLR_NO_HARDWARE_CURSORS, 1
 
 # ######## Screen tearing #########
-# env = WLR_DRM_NO_ATOMIC, 1
+env = WLR_DRM_NO_ATOMIC, 1
 
 # ############ Others #############
 
