--- a/custom/keybinds.conf
+++ b/custom/keybinds.conf
@@ -3,6 +3,8 @@
 bind = Super, Return, exec, foot
 bind = Super SHIFT, B , exec, brave --unity-launch --enable-features=UseOzonePlatform --enable-gpu --ozone-platform=wayland
 bind = Super, c, exec, code --unity-launch --enable-features=UseOzonePlatform --enable-gpu --ozone-platform=wayland 
+bind = Super, Left, exec, ~/.config/ags/scripts/color_generation/switchwall.sh
+bind = Super, Right, exec, ~/.config/ags/scripts/color_generation/switchnext.sh
 bind = Super, w, exec, whatsapp-for-linux
 bind = Super, t, exec, telegram-desktop
 bind = Super, m, exec, AndroidMessages
