--- a/hyprland/colors.conf
+++ b/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c cee7efBB -b 334a5144 -s 00000000'
+# exec = export SLURP_ARGS='-d -c C9E6FFBB -b 2B4A6044 -s 00000000'
 
 general {
-    col.active_border = rgba(e1e3e439)
-    col.inactive_border = rgba(89929530)
+    col.active_border = rgba(D9E4EA39)
+    col.inactive_border = rgba(84939A30)
 }
 
 misc {
-    background_color = rgba(191c1dFF)
+    background_color = rgba(0A1519FF)
 }
 
 plugin {
@@ -19,16 +19,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0F1011FF)
-        col.text = rgba(e1e3e4FF)
+        bar_color = rgba(0A1519FF)
+        col.text = rgba(D9E4EAFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e1e3e4), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e1e3e4), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e1e3e4), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(D9E4EA), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(D9E4EA), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(D9E4EA), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(55d6f4AA) rgba(55d6f477),pinned:1
+windowrulev2 = bordercolor rgba(50D5FFAA) rgba(50D5FF77),pinned:1
