--- a/custom/keybinds.conf
+++ b/custom/keybinds.conf
@@ -7,7 +7,7 @@ bind = Super, Left, exec, ~/.config/ags/scripts/color_generation/switchwall.sh
 bind = Super, Right, exec, ~/.config/ags/scripts/color_generation/switchnext.sh
 bind = Super, w, exec, whatsapp-for-linux
 bind = Super, t, exec, telegram-desktop
-bind = Super, m, exec, AndroidMessages
+bind = Super, m, exec, /opt/Android\ Messages/AndroidMessages --enable-features=UseOzonePlatform --enable-gpu --ozone-platform=wayland 
 bind = CONTROL SUPER, e, exec, gucharmap --font='JetBrain Nerd Font, monospace'
 bind = Super, e, exec, element-desktop %U
 bind = SUPER, s, exec, hyprshot --mode=region --o ~/Images/screenshots
