--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,13 +1,13 @@
-$text_color = rgba(e1e3e4FF)
-$entry_background_color = rgba(0F101111)
-$entry_border_color = rgba(89929555)
-$entry_color = rgba(bfc8cbFF)
+$text_color = rgba(D9E4EAFF)
+$entry_background_color = rgba(0A151911)
+$entry_border_color = rgba(84939A55)
+$entry_color = rgba(BAC9D0FF)
 $font_family = Gabarito
 $font_family_clock = Gabarito
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    color = rgba(0F101177)
+    color = rgba(0A151977)
     # path = {{ SWWW_WALL }}
     path = screenshot
     blur_size = 5
@@ -32,6 +32,8 @@ input-field {
 label { # Clock
     monitor =
     text = $TIME
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 65
     font_family = $font_family_clock
@@ -43,6 +45,8 @@ label { # Clock
 label { # Greeting
     monitor =
     text = hi $USER !!!
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 20
     font_family = $font_family
@@ -54,6 +58,8 @@ label { # Greeting
 label { # lock icon
     monitor =
     text = lock
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 21
     font_family = $font_material_symbols
@@ -65,6 +71,8 @@ label { # lock icon
 label { # "locked" text
     monitor =
     text = locked
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 14
     font_family = $font_family
@@ -77,6 +85,8 @@ label { # "locked" text
 label { # Status
     monitor =
     text = cmd[update:5000] ~/.config/hypr/hyprlock/status.sh
+    shadow_passes = 1
+    shadow_boost = 0.5
     color = $text_color
     font_size = 14
     font_family = $font_family
