added opacity rules

--- a/custom/rules.conf
+++ b/custom/rules.conf
@@ -1,14 +1,9 @@
-# You can put custom rules here
-
-# Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
-
 # Règle de base (fenêtre inactive)
-windowrule = opacity 0.89 override 0.89 override, .* # Opacité de 89% pour toutes les fenêtres inactives
+windowrule = opacity 1.0 override 0.75 override, .* # Opacité de 100% pour toutes les fenêtres inactives
 
 # Règle au passage de la souris (fenêtre inactive)
-windowrule = opacity 0.75 override 0.75 override, .* match: { focused: false } # Opacité de 75% pour les fenêtres inactives survolées
+windowrule = opacity 0.4 override 0.65 override, .* match: { focused: false, hovered: true } # Opacité de 50% pour toutes les fenêtres inactives au survol
 
 # Règle pour la fenêtre active
-windowrule = opacity 1 override 1 override, .* match: { focused: true } # Opacité totale (100%) pour la fenêtre active
+windowrule = opacity 1.0 override 0.75 override, .* match: { focused: true } # Opacité de 100% pour la fenêtre active
 
-# Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
