added glsl menu

--- a/custom/general.conf
+++ b/custom/general.conf
@@ -1,14 +1,18 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 #
-$scriptsDir = $HOME/.config/hypr/custom/scripts
+$hypr=$HOME/.config/hypr
+$scriptsDir = $hypr/custom/scripts
 $display=$scriptsDir/display
 $menu = $scriptsDir/menu
 $fullmenu = $scriptsDir/fullmenu
+$glsl=$hypr/shaders/glsl
 $menupage = $scriptsDir/menupage
 $start = $scriptsDir/start
 $backgroundGL = $scriptsDir/backgroundGL
 $backgroundVideo = $scriptsDir/backgroundVideo
+$glpaperMenu = $scriptsDir/glpaperMenu
+$videoid = $scriptsDir/videoid
 exec-once = $start
 #monitor= $(echo $display)
 #monitor=HDMI-A-1,3840x2160@60,0x0,1
