--- a/custom/keybinds.conf
+++ b/custom/keybinds.conf
@@ -19,7 +19,7 @@ bind = Super SHIFT, D, exec, $fullmenu
 bind = Super, D, exec, $menu
 bind = Super ALT, D, exec, $menupage
 
-bind = Super, G, exec, $backgroundGL
+bind = Super, G, exec, $glpaperMenu
 bind = ALT Super, G, exec, $backgroundGL next
 bind = FN Super, G, exec, $backgroundGL prev
 bind = Super, H, exec, $backgroundVideo
