added mounch to build a more complex glsl background menu

--- a/hyprland/colors.conf
+++ b/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c C8E6FFBB -b 2A4A5F44 -s 00000000'
+# exec = export SLURP_ARGS='-d -c C6E9FFBB -b 2A4D6044 -s 00000000'
 
 general {
-    col.active_border = rgba(D8E4EA39)
-    col.inactive_border = rgba(84939A30)
+    col.active_border = rgba(DAE4EC39)
+    col.inactive_border = rgba(86929C30)
 }
 
 misc {
-    background_color = rgba(0A1519FF)
+    background_color = rgba(0B141AFF)
 }
 
 plugin {
@@ -19,16 +19,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0A1519FF)
-        col.text = rgba(D8E4EAFF)
+        bar_color = rgba({{ $background }}FF)
+        col.text = rgba(DAE4ECFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(D8E4EA), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(D8E4EA), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(D8E4EA), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(DAE4EC), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(DAE4EC), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(DAE4EC), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(42D6FFAA) rgba(42D6FF77),pinned:1
+windowrulev2 = bordercolor rgba(00D9FBAA) rgba(00D9FB77),pinned:1
