--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,13 +1,13 @@
-$text_color = rgba(D8E4EAFF)
-$entry_background_color = rgba(0A151911)
-$entry_border_color = rgba(84939A55)
-$entry_color = rgba(B9C9D0FF)
+$text_color = rgba(DAE4ECFF)
+$entry_background_color = rgba({{ $background }}11)
+$entry_border_color = rgba(83939855)
+$entry_color = rgba(B9C9CEFF)
 $font_family = Gabarito
 $font_family_clock = Gabarito
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    color = rgba(0A151977)
+    color = rgba({{ $background }}77)
     # path = {{ SWWW_WALL }}
     path = screenshot
     blur_size = 5
