--- a/hyprland/colors.conf
+++ b/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c C6E9FFBB -b 2A4D6044 -s 00000000'
+# exec = export SLURP_ARGS='-d -c {{ $onSecondaryContainer }}BB -b {{ $secondaryContainer }}44 -s 00000000'
 
 general {
-    col.active_border = rgba(DAE4EC39)
-    col.inactive_border = rgba(86929C30)
+    col.active_border = rgba({{ $onSurface }}39)
+    col.inactive_border = rgba({{ $outline }}30)
 }
 
 misc {
-    background_color = rgba(0B141AFF)
+    background_color = rgba({{ $surface }}FF)
 }
 
 plugin {
@@ -20,15 +20,15 @@ plugin {
         bar_part_of_window = true
 
         bar_color = rgba({{ $background }}FF)
-        col.text = rgba(DAE4ECFF)
+        col.text = rgba({{ $onBackground }}FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(DAE4EC), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(DAE4EC), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(DAE4EC), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(00D9FBAA) rgba(00D9FB77),pinned:1
+windowrulev2 = bordercolor rgba({{ $primary }}AA) rgba({{ $primary }}77),pinned:1
