--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,7 +1,7 @@
-$text_color = rgba(DAE4ECFF)
+$text_color = rgba({{ $onBackground }}FF)
 $entry_background_color = rgba({{ $background }}11)
-$entry_border_color = rgba(83939855)
-$entry_color = rgba(B9C9CEFF)
+$entry_border_color = rgba({{ $outline }}55)
+$entry_color = rgba({{ $onSurfaceVariant }}FF)
 $font_family = Gabarito
 $font_family_clock = Gabarito
 $font_material_symbols = Material Symbols Rounded
