--- a/custom/scripts/glpaper.config
+++ b/custom/scripts/glpaper.config
@@ -30,8 +30,8 @@ insensitive=false
 
 ## Other
 hide_scroll=true
-no_actions=false
-sort_order=alphabetical
+no_actions=true
+sort_order=default
 gtk_dark=true
 filter_rate=100
 
