--- a/hyprland/colors.conf
+++ b/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c {{ $onSecondaryContainer }}BB -b {{ $secondaryContainer }}44 -s 00000000'
+# exec = export SLURP_ARGS='-d -c C8E6FFBB -b 2A4A5F44 -s 00000000'
 
 general {
-    col.active_border = rgba({{ $onSurface }}39)
-    col.inactive_border = rgba({{ $outline }}30)
+    col.active_border = rgba(D8E4EA39)
+    col.inactive_border = rgba(84939A30)
 }
 
 misc {
-    background_color = rgba({{ $surface }}FF)
+    background_color = rgba(0A1519FF)
 }
 
 plugin {
@@ -19,16 +19,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba({{ $background }}FF)
-        col.text = rgba({{ $onBackground }}FF)
+        bar_color = rgba(0A1519FF)
+        col.text = rgba(D8E4EAFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb({{ $onBackground }}), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(D8E4EA), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(D8E4EA), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(D8E4EA), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba({{ $primary }}AA) rgba({{ $primary }}77),pinned:1
+windowrulev2 = bordercolor rgba(00D9FBAA) rgba(00D9FB77),pinned:1
