--- a/custom/keybinds.conf
+++ b/custom/keybinds.conf
@@ -24,7 +24,6 @@ bind = ALT Super, G, exec, $backgroundGL next
 bind = FN Super, G, exec, $backgroundGL prev
 bind = Super, H, exec, $backgroundVideo
 
-
 # Azerty
 # Switch workspaces with mainMod + [0-9]
  bind = Super, Ampersand, workspace, 1
@@ -32,9 +31,9 @@ bind = Super, H, exec, $backgroundVideo
  bind = Super, Quotedbl, workspace, 3
  bind = Super, Apostrophe, workspace, 4
  bind = Super, Parenleft, workspace, 5
- bind = Super, Minus, workspace, 6
+ bind = Super, Section, workspace, 6
  bind = Super, Egrave, workspace, 7
- bind = Super, Underscore, workspace, 8
+ bind = Super, Exclam, workspace, 8
  bind = Super, ccedilla, workspace, 9
  bind = Super, agrave, workspace, 10
 
@@ -45,12 +44,11 @@ bind = Super, H, exec, $backgroundVideo
  bind = Super CTRL, Quotedbl, movetoworkspace, 3
  bind = Super CTRL, Apostrophe, movetoworkspace, 4
  bind = Super CTRL, Parenleft, movetoworkspace, 5
- bind = Super CTRL, Minus, movetoworkspace, 6
+ bind = Super CTRL, Dash, movetoworkspace, 6
  bind = Super CTRL, Egrave, movetoworkspace, 7
- bind = Super CTRL, Underscore, movetoworkspace, 8
+ bind = Super CTRL, Exclam, movetoworkspace, 8
  bind = Super CTRL, ccedilla, movetoworkspace, 9
  bind = Super CTRL, agrave, movetoworkspace, 10
  bind = Super CTRL, bracketleft, movetoworkspace, -1Rr
  bind = Super CTRL, bracketright, movetoworkspace, +1
-
 
