--- a/custom/rules.conf
+++ b/custom/rules.conf
@@ -1,8 +1,3 @@
-# Règle de base (fenêtre inactive)
-windowrule = opacity 1.0 override 0.25 override, .* # Opacité de 100% pour toutes les fenêtres inactives
-
-# Règle au passage de la souris (fenêtre inactive)
-windowrule = opacity 1.0 override 0.35 override, .* match: { focused: false, hovered: true } # Opacité de 50% pour toutes les fenêtres inactives au survol
-
-# Règle pour la fenêtre active
-windowrule = opacity 1.0 override 0.75 override, .* match: { focused: true } # Opacité de 100% pour la fenêtre active
+# You can put custom rules here
+# Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
+# Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
