--- a/custom/general.conf
+++ b/custom/general.conf
@@ -1,6 +1,22 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
-#
+input {
+    # Keyboard: Add a layout and uncomment kb_options for Win+Space switching shortcut
+    kb_layout = fr
+    # kb_options = grp:win_space_toggle
+    numlock_by_default = true
+    repeat_delay = 250
+    repeat_rate = 35
+
+    touchpad {
+        natural_scroll = yes
+        disable_while_typing = true
+        clickfinger_behavior = true
+        scroll_factor = 0.5
+    }
+    special_fallthrough = true
+    follow_mouse = 1
+}
 $hypr=$HOME/.config/hypr
 $scriptsDir = $hypr/custom/scripts
 $display=$scriptsDir/display
