--- a/hypridle.conf
+++ b/hypridle.conf
@@ -1,14 +1,14 @@
 $lock_cmd = pidof hyprlock || hyprlock
-$suspend_cmd = systemctl suspend || loginctl suspend
+$suspend_cmd = pidof steam || systemctl suspend || loginctl suspend # fuck nvidia
 
 general {
     lock_cmd = $lock_cmd
-    before_sleep_cmd = $lock_cmd
+    before_sleep_cmd = loginctl lock-session
 }
 
 listener {
     timeout = 180 # 3mins
-    on-timeout = $lock_cmd
+    on-timeout = loginctl lock-session
 }
 
 listener {
