--- a/hyprland/colors.conf
+++ b/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c C8E6FFBB -b 2A4A5F44 -s 00000000'
+# exec = export SLURP_ARGS='-d -c FFDAD4BB -b 673B3444 -s 00000000'
 
 general {
-    col.active_border = rgba(D8E4EA39)
-    col.inactive_border = rgba(84939A30)
+    col.active_border = rgba(F7DCDE39)
+    col.inactive_border = rgba(A58A8D30)
 }
 
 misc {
-    background_color = rgba(0A1519FF)
+    background_color = rgba(1D1011FF)
 }
 
 plugin {
@@ -19,16 +19,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0A1519FF)
-        col.text = rgba(D8E4EAFF)
+        bar_color = rgba(1D1011FF)
+        col.text = rgba(F7DCDEFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(D8E4EA), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(D8E4EA), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(D8E4EA), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(F7DCDE), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(F7DCDE), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(F7DCDE), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(00D9FBAA) rgba(00D9FB77),pinned:1
+windowrulev2 = bordercolor rgba(FFB2BCAA) rgba(FFB2BC77),pinned:1
