--- a/hyprland/general.conf
+++ b/hyprland/general.conf
@@ -7,7 +7,7 @@ monitor=,preferred,auto,1
 
 input {
     # Keyboard: Add a layout and uncomment kb_options for Win+Space switching shortcut
-    kb_layout = fr 
+    kb_layout = us
     # kb_options = grp:win_space_toggle
     numlock_by_default = true
     repeat_delay = 250
@@ -19,7 +19,6 @@ input {
         clickfinger_behavior = true
         scroll_factor = 0.5
     }
-    
     special_fallthrough = true
     follow_mouse = 1
 }
@@ -56,7 +55,7 @@ general {
     layout = dwindle
     
     #focus_to_other_workspaces = true # ahhhh i still haven't properly implemented this
-    allow_tearing = false # some guy told me tearing might make things smoother idk
+    allow_tearing = true # This just allows the `immediate` window rule to work
 }
 
 dwindle {
@@ -74,19 +73,21 @@ decoration {
         xray = true
         special = false
         new_optimizations = true
-        size = 5
+        size = 14
         passes = 4
         brightness = 1
         noise = 0.01
         contrast = 1
+        popups = true
+        popups_ignorealpha = 0.6
     }
     # Shadow
-    drop_shadow = false
+    drop_shadow = true
     shadow_ignore_window = true
     shadow_range = 20
     shadow_offset = 0 2
-    shadow_render_power = 2
-    col.shadow = rgba(0000001A)
+    shadow_render_power = 4
+    col.shadow = rgba(0000002A)
     
     # Shader
     # screen_shader = ~/.config/hypr/shaders/nothing.frag
@@ -109,19 +110,27 @@ animations {
     bezier = overshot, 0.05, 0.9, 0.1, 1.1
     bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
     bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    bezier = fluent_decel, 0.1, 1, 0, 1
+    bezier = menu_decel, 0.1, 1, 0, 1
+    bezier = menu_accel, 0.38, 0.04, 1, 0.07
     bezier = easeInOutCirc, 0.85, 0, 0.15, 1
     bezier = easeOutCirc, 0, 0.55, 0.45, 1
     bezier = easeOutExpo, 0.16, 1, 0.3, 1
     bezier = softAcDecel, 0.26, 0.26, 0.15, 1
+    bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
     # Animation configs
     animation = windows, 1, 3, md3_decel, popin 60%
+    animation = windowsIn, 1, 3, md3_decel, popin 60%
+    animation = windowsOut, 1, 3, md3_accel, popin 60%
     animation = border, 1, 10, default
-    animation = fade, 1, 2.5, md3_decel
-    # animation = workspaces, 1, 3.5, md3_decel, slide
-    animation = workspaces, 1, 7, fluent_decel, slide
+    animation = fade, 1, 3, md3_decel
+    # animation = layers, 1, 2, md3_decel, slide
+    animation = layersIn, 1, 3, menu_decel, slide
+    animation = layersOut, 1, 1.6, menu_accel
+    animation = fadeLayersIn, 1, 2, menu_decel
+    animation = fadeLayersOut, 1, 4.5, menu_accel
+    animation = workspaces, 1, 7, menu_decel, slide
     # animation = workspaces, 1, 2.5, softAcDecel, slide
-    # animation = workspaces, 1, 7, fluent_decel, slidefade 15%
+    # animation = workspaces, 1, 7, menu_decel, slidefade 15%
     # animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
     animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
@@ -139,5 +148,21 @@ misc {
     disable_hyprland_logo = true
     force_default_wallpaper = 0
     new_window_takes_over_fullscreen = 2
+    allow_session_lock_restore = true
+    
+    initial_workspace_tracking = false
 }
 
+# Overview
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(000000)
+        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = false # laptop touchpad, 4 fingers
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = false
+    }
+}
