--- a/hyprland/rules.conf
+++ b/hyprland/rules.conf
@@ -1,12 +1,18 @@
-# ####### Window rules ########
-#windowrule = noblur,.*  # Disables blur for windows. Substantially improves performance.
-
+# ######## Window rules ########
+windowrule = noblur,.*
 # windowrule = opacity 0.89 override 0.89 override, .* # Applies transparency to EVERY WINDOW
+windowrule = float, ^(blueberry.py)$
 windowrule = float, ^(steam)$
 windowrule = float, ^(guifetch)$ # FlafyDev/guifetch
-windowrulev2 = tile,class:(wps)
-windowrulev2 = tile,class:(dev.warp.Warp)
- 
+windowrulev2 = tile, class:(dev.warp.Warp)
+windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrule = center, title:^(Open File)(.*)$
+windowrule = center, title:^(Select a File)(.*)$
+windowrule = center, title:^(Choose wallpaper)(.*)$
+windowrule = center, title:^(Open Folder)(.*)$
+windowrule = center, title:^(Save As)(.*)$
+windowrule = center, title:^(Library)(.*)$
+windowrule = center, title:^(File Upload)(.*)$
 
 # Dialogs
 windowrule=float,title:^(Open File)(.*)$
@@ -14,22 +20,30 @@ windowrule=float,title:^(Select a File)(.*)$
 windowrule=float,title:^(Choose wallpaper)(.*)$
 windowrule=float,title:^(Open Folder)(.*)$
 windowrule=float,title:^(Save As)(.*)$
-windowrule=float,title:^(Library)(.*)$ 
+windowrule=float,title:^(Library)(.*)$
+windowrule=float,title:^(File Upload)(.*)$
 
-# ####### Layer rules ########
+# Tearing
+windowrule=immediate,.*\.exe
+windowrulev2=immediate,class:(steam_app)
+
+# No shadow for tiled windows
+windowrulev2 = noshadow,floating:0
+
+# ######## Layer rules ########
 layerrule = xray 1, .*
 # layerrule = noanim, .*
+layerrule = noanim, walker
 layerrule = noanim, selection
 layerrule = noanim, overview
 layerrule = noanim, anyrun
-layerrule = noanim, sideleft
-layerrule = noanim, sideright
+layerrule = noanim, indicator.*
 layerrule = noanim, osk
+layerrule = noanim, hyprpicker
+layerrule = blur, shell:*
+layerrule = ignorealpha 0.6, shell:*
 
-layerrule = blur, gi
-layerrule = ignorealpha 0.8, eww
 layerrule = noanim, noanim
-layerrule = blur, noanim
 layerrule = blur, gtk-layer-shell
 layerrule = ignorezero, gtk-layer-shell
 layerrule = blur, launcher
@@ -38,27 +52,28 @@ layerrule = blur, notifications
 layerrule = ignorealpha 0.69, notifications
 
 # ags
+layerrule = animation slide top, sideleft.*
+layerrule = animation slide top, sideright.*
 layerrule = blur, session
-layerrule = blur, alpha 0.85, sideright
-layerrule = blur, alpha 0.85, sideleft
 
-# layerrule = blur, bar
-# layerrule = ignorealpha 0.64, bar
-# layerrule = blur, corner.*
-# layerrule = ignorealpha 0.69, corner.*
-# layerrule = blur, dock
-# layerrule = ignorealpha 0.69, dock
-# layerrule = blur, indicator.*
-# layerrule = ignorealpha 0.69, indicator.*
-# layerrule = blur, overview
-# layerrule = ignorealpha 0.69, overview
-# layerrule = blur, cheatsheet
-# layerrule = ignorealpha 0.69, cheatsheet
-# layerrule = blur, sideright
-# layerrule = ignorealpha 0.69, sideright
-# layerrule = blur, sideleft
-# layerrule = ignorealpha 0.69, sideleft
-# layerrule = blur, indicator*
-# layerrule = ignorealpha 0.69, indicator*
-# layerrule = blur, osk
-# layerrule = ignorealpha 0.69, osk
+layerrule = blur, bar
+layerrule = ignorealpha 0.6, bar
+layerrule = blur, corner.*
+layerrule = ignorealpha 0.6, corner.*
+layerrule = blur, dock
+layerrule = ignorealpha 0.6, dock
+layerrule = blur, indicator.*
+layerrule = ignorealpha 0.6, indicator.*
+layerrule = blur, overview
+layerrule = ignorealpha 0.6, overview
+layerrule = blur, cheatsheet
+layerrule = ignorealpha 0.6, cheatsheet
+layerrule = blur, sideright
+layerrule = ignorealpha 0.6, sideright
+layerrule = blur, sideleft
+layerrule = ignorealpha 0.6, sideleft
+layerrule = blur, indicator*
+layerrule = ignorealpha 0.6, indicator*
+layerrule = blur, osk
+layerrule = ignorealpha 0.6, osk
+
