--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,17 +1,22 @@
-$text_color = rgba(D8E4EAFF)
-$entry_background_color = rgba(0A151911)
-$entry_border_color = rgba(84939A55)
-$entry_color = rgba(B9C9D0FF)
-$font_family = Gabarito
-$font_family_clock = Gabarito
+# $text_color = rgba(E3E1EFFF)
+# $entry_background_color = rgba(12131C11)
+# $entry_border_color = rgba(908F9F55)
+# $entry_color = rgba(C6C5D6FF)
+$text_color = rgba(FFFFFFFF)
+$entry_background_color = rgba(33333311)
+$entry_border_color = rgba(3B3B3B55)
+$entry_color = rgba(FFFFFFFF)
+$font_family = Rubik Light
+$font_family_clock = Rubik Light
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    color = rgba(0A151977)
+    # color = rgba(0D0D17FF)
+    color = rgba(000000FF)
     # path = {{ SWWW_WALL }}
-    path = screenshot
-    blur_size = 5
-    blur_passes = 4
+    # path = screenshot
+    # blur_size = 5
+    # blur_passes = 4
 }
 input-field {
     monitor =
@@ -77,7 +82,7 @@ label { # "locked" text
     font_size = 14
     font_family = $font_family
 
-    position = 0, 50
+    position = 0, 45
     halign = center
     valign = bottom
 }
